--- a/prj.conf
+++ b/prj.conf
@@ -1,5 +1,5 @@
 # General config
-CONFIG_ASSERT=y
+CONFIG_ASSERT=n
 
 # Logging
 CONFIG_LOG=y
@@ -18,6 +18,7 @@ CONFIG_LTE_PDP_CONTEXT="0,\"IP\",\"telenor.iotgw\""
 
 # CoAP
 CONFIG_COAP=y
+CONFIG_COAP_UTILS=y
 
 # BSD library
 CONFIG_BSD_LIBRARY=y
@@ -26,12 +27,18 @@ CONFIG_BSD_LIBRARY_TRACE_ENABLED=n
 # Sensors
 CONFIG_I2C=y
 CONFIG_SENSOR=y
+CONFIG_SENSOR_SIM=n
 CONFIG_BME680=y
+CONFIG_BH1749=y
+
+# Libc, floating point support
+CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_NANO=n
 
 # Heap and stacks
 CONFIG_HEAP_MEM_POOL_SIZE=16384
 CONFIG_MAIN_STACK_SIZE=8192
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=8192
 CONFIG_HW_STACK_PROTECTION=y
 
 # Disable native network stack to save some memory
@@ -39,12 +46,12 @@ CONFIG_NET_IPV4=n
 CONFIG_NET_IPV6=n
 CONFIG_NET_UDP=n
 CONFIG_NET_TCP=n
-CONFIG_NET_RX_STACK_SIZE=1024
-CONFIG_NET_TX_STACK_SIZE=1024
+CONFIG_NET_RX_STACK_SIZE=5120
+CONFIG_NET_TX_STACK_SIZE=2048
 
 # Build without bootloader
 CONFIG_BOOTLOADER_MCUBOOT=y
 
 # Uncomment the lines below to disable optimizations when debugging
-# CONFIG_NO_OPTIMIZATIONS=y
-# CONFIG_DEBUG=y
+CONFIG_NO_OPTIMIZATIONS=y
+CONFIG_DEBUG=y
