--- a/prj.conf
+++ b/prj.conf
@@ -5,6 +5,10 @@ CONFIG_ASSERT=n
 CONFIG_LOG=y
 CONFIG_LOG_STRDUP_MAX_STRING=64
 
+# AT host library
+CONFIG_AT_HOST_LIBRARY=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+
 # Network
 CONFIG_NETWORKING=y
 CONFIG_NET_SOCKETS=y
@@ -27,11 +31,12 @@ CONFIG_BSD_LIBRARY_TRACE_ENABLED=n
 # Sensors
 CONFIG_I2C=y
 CONFIG_SENSOR=y
-CONFIG_SENSOR_SIM=n
+CONFIG_PWM=y
+# CONFIG_SENSOR_SIM=n
 CONFIG_BME680=y
 CONFIG_BH1749=y
 
-# Libc, floating point support
+# LIBS, floating point support
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_NANO=n
 
