--- a/prj.conf
+++ b/prj.conf
@@ -10,6 +10,7 @@ CONFIG_AT_HOST_LIBRARY=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 
 # Network
+CONFIG_MODEM_INFO=y
 CONFIG_NETWORKING=y
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_OFFLOAD=y
