--- a/prj.conf
+++ b/prj.conf
@@ -36,6 +36,7 @@ CONFIG_PWM=y
 # CONFIG_SENSOR_SIM=n
 CONFIG_BME680=y
 CONFIG_BH1749=y
+CONFIG_ADXL362=y
 
 # LIBS, floating point support
 CONFIG_NEWLIB_LIBC=y
