--- a/prj.conf
+++ b/prj.conf
@@ -7,6 +7,7 @@ CONFIG_LOG_STRDUP_MAX_STRING=64
 
 # AT host library
 CONFIG_AT_HOST_LIBRARY=y
+CONFIG_AT_CMD_THREAD_STACK_SIZE=2048
 CONFIG_UART_INTERRUPT_DRIVEN=y
 
 # Network
