--- a/prj.conf
+++ b/prj.conf
@@ -42,6 +42,7 @@ CONFIG_ADXL362=y
 # LIBS, floating point support
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_NANO=n
+CONFIG_XOROSHIRO_RANDOM_GENERATOR=y
 
 # Heap and stacks
 CONFIG_HEAP_MEM_POOL_SIZE=16384
@@ -60,6 +61,6 @@ CONFIG_NET_TX_STACK_SIZE=2048
 # Build without bootloader
 CONFIG_BOOTLOADER_MCUBOOT=y
 
-# Uncomment the lines below to disable optimizations when debugging
-CONFIG_NO_OPTIMIZATIONS=y
-CONFIG_DEBUG=y
+# Debug
+CONFIG_NO_OPTIMIZATIONS=n
+CONFIG_DEBUG=n
