--- a/Kconfig
+++ b/Kconfig
@@ -24,6 +24,11 @@ config CONFIG_ADXL362
 	bool "Use ADXL362 (motion) sensor"
 	default y if BOARD_THINGY91_NRF9160NS
 
+config UI_LED_PWM_FREQUENCY
+	int "LED PWM frequency"
+	range 100 1000000
+	default 20000
+
 endmenu
 
 menu "Zephyr Kernel"
